fix support on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ main{
                 img {
                     width:100%;
                     aspect-ratio: 1/1;
+                    min-width:100%;
                     transition:0.5s;
                 }
             }
